k8s/deployment.yaml
kind: Deployment
apiVersion: apps/v1

metadata:
  name: goserver
  labels:
    app: goserver

spec:
  selector:
    matchLabels:
      app: goserver
  replicas: 1
  template:
    metadata:
      labels:
        app: goserver
    spec:
      containers:
        - name: goserver
          image: bcdscrypto/go-test:v5.4-readiness
          imagePullPolicy: Always #IfNotPresent Always

          startupProbe:
            httpGet:
              path: /healthz
              port: 80
            periodSeconds: 3
            failureThreshold: 10

          readinessProbe:
            httpGet:
              path: /healthz
              port: 80
            periodSeconds: 3
            failureThreshold: 1
            # initialDelaySeconds: 10

          livenessProbe:
            httpGet:
              path: /healthz
              port: 80
            periodSeconds: 5
            failureThreshold: 1
            timeoutSeconds: 1
            successThreshold: 1
            # initialDelaySeconds: 15

          resources:
            limits:
              memory: "128Mi"
              cpu: "500m"
          volumeMounts:
            - mountPath: "/go/myfamily"
              name: config
      volumes:
        - name: config
          configMap:
            name: configmap-family
            items:
              - key: members
                path: "myfamily.txt"
