k8s/pod.yaml
kind: Pod
apiVersion: v1

metadata:
  name: goserver
  labels:
    app: goserver

spec:
  containers:
    - name: goserver
      image: bcdscrypto/go-test:latest
