k8s/postgres-service-headless.yaml
apiVersion: v1
kind: Service
metadata:
  name: postgres-h
spec:
  selector:
    app: postgres
  ports:
    - port: 5432    # do service
  clusterIP: None
